@@ -1,1 +1,3 @@
 # H2C-FullGC-Demo
+How to run it:
+java -Xmx1024m -Xms1024m -XX:+PrintGC -jar demo-0.0.1-SNAPSHOT.jar
